--- a/config/element.ini
+++ b/config/element.ini
@@ -1,5 +1,5 @@
 [loginPage]
-login = xpath>
+login = xpath>//span[contains(text(),'登录')]
 user = id>username
 passwd = id>password
 submit = id>submitBtn
