--- a/config/element.ini
+++ b/config/element.ini
@@ -1,8 +1,9 @@
+# -*- coding: utf-8 -*-
 [loginPage]
-;login = xpath>//span[contains(text(),'登录')]
-;user = id>username
-;passwd = id>password
-;submit = id>submitBtn
+login = xpath>//span[contains(text(),'登录')]
+user = id>username
+passwd = id>password
+submit = id>submitBtn
 kw = id>kw
 su = id>su
 
