--- a/config/element.ini
+++ b/config/element.ini
@@ -8,5 +8,5 @@ kw = id>kw
 su = id>su
 
 [anyPage]
-user = class>useractionbtn
+userinfo = class>useractionbtn
 logout = xpath>//div[contains(text(),'登出')]
