--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,4 @@
 [base]
-baseurl = https://chentest.paxsit.com
+baseurl = https://chentest.thisisatest.com
 username = chenlifeng@paxsz.com
 passwd = pass1234
