--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,4 @@
 [base]
 baseurl = https://chentest.thisisatest.com
-username = chenlifeng@paxsz.com
-passwd = pass1234
+username = chenlifeng@thisisatest.com
+passwd = 123123123
